--- a/04-EditingATask/03-wire_up_task_edit_button/templates/tasks.html
+++ b/04-EditingATask/03-wire_up_task_edit_button/templates/tasks.html
@@ -7,7 +7,7 @@
                 <div class="col s3">
                     <i class="material-icons">expand_more</i>
                     <a class="waves-effect waves-light btn btn_small">Done</a>
-                    <a class="waves-effect waves-light btn btn_small blue">Edit</a>
+                    <a href="{{url_for('edit_task', task_id=task._id)}}" class="waves-effect waves-light btn btn_small blue">Edit</a>
                     
                 </div>
                 <div class="task_header col s9">
